5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1758_1189.log
== TEST (2019-05-28 13:25:02) 
-- CODE:
x = input("OLHA O PASTELLLL:").upper()
y = x.replace()
i = -1
inv =""
while( i => -len(y)):
	inv = inv + y[i]
	i = i - 1
	if(inv == y):
		print(y)
		print("1")
-- ERROR:
File "XXXX", line 5
    while( i => -len(y)):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:25:31) 
-- CODE:
x = input("OLHA O PASTELLLL:").upper()
y = x.replace()
i = -1
inv =""
while( i >= -len(y)):
	inv = inv + y[i]
	i = i - 1
	if(inv == y):
		print(y)
		print("1")
	else:
		print(y)
		print("0")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y = x.replace()
TypeError: replace() takes at least 2 arguments (0 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:28:27) 
-- CODE:
x = input("OLHA O PASTELLLL:").upper()
y = replace(x)
i = -1
inv =""
while( i >= -len(y)):
	inv = inv + y[i]
	i = i - 1
	if(inv == y):
		print(y)
		print("1")
	else:
		print(y)
		print("0")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y = replace(x)
NameError: name 'replace' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:29:14) 
-- CODE:
x = input("OLHA O PASTELLLL:").upper()
y = str.replace(x)
i = -1
inv =""
while( i >= -len(y)):
	inv = inv + y[i]
	i = i - 1
	if(inv == y):
		print(y)
		print("1")
	else:
		print(y)
		print("0")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y = str.replace(x)
TypeError: replace() takes at least 2 arguments (0 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:29:14) 
-- CODE:
x = input("OLHA O PASTELLLL:").upper()
y = str.replace(x)
i = -1
inv =""
while( i >= -len(y)):
	inv = inv + y[i]
	i = i - 1
	if(inv == y):
		print(y)
		print("1")
	else:
		print(y)
		print("0")
-- EXECUTION TIME:
0.134891
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1189/main.py", line 2, in <module>
    y = str.replace(x)
TypeError: replace() takes at least 2 arguments (0 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:29:15) 
-- CODE:
x = input("OLHA O PASTELLLL:").upper()
y = str.replace(x)
i = -1
inv =""
while( i >= -len(y)):
	inv = inv + y[i]
	i = i - 1
	if(inv == y):
		print(y)
		print("1")
	else:
		print(y)
		print("0")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y = str.replace(x)
TypeError: replace() takes at least 2 arguments (0 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:29:48) 
-- CODE:
x = input("OLHA O PASTELLLL:").upper()
y = str.replace[0:]
i = -1
inv =""
while( i >= -len(y)):
	inv = inv + y[i]
	i = i - 1
	if(inv == y):
		print(y)
		print("1")
	else:
		print(y)
		print("0")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y = str.replace[0:]
TypeError: 'method_descriptor' object is not subscriptable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:32:04) 
-- CODE:
x = input("OLHA O PASTELLLL:").upper().replace()
i = -1
inv =""
while( i >= -len(x)):
	inv = inv + x[i]
	i = i - 1
	if(inv == x):
		print(x)
		print("1")
	else:
		print(x)
		print("0")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = input().upper().replace()
TypeError: replace() takes at least 2 arguments (0 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:37:19) 
-- CODE:
x = input("OLHA O PASTELLLL:").upper()
y = x.replace(old,new[ ,max])
i = -1
inv =""
while( i >= -len(x)):
	inv = inv + x[i]
	i = i - 1
	if(inv == x):
		print(x)
		print("1")
	else:
		print(x)
		print("0")
		
		
-- ERROR:
File "XXXX", line 2
    y = x.replace(old,new[ ,max])
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:37:56) 
-- CODE:
x = input("OLHA O PASTELLLL:").upper()
i = -1
inv =""
while( i >= -len(x)):
	inv = inv + x[i]
	i = i - 1
	if(inv == x):
		print(x)
		print("1")
	else:
		print(x)
		print("0")
		
		
-- OUTPUT:
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:38:05) 
-- CODE:
x = input("OLHA O PASTELLLL:").upper()
i = -1
inv =""
while( i >= -len(x)):
	inv = inv + x[i]
	i = i - 1
	if(inv == x):
		print(x)
		print("1")
	else:
		print(x)
		print("0")
		
		
-- OUTPUT:
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
0
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:38:34) 
-- CODE:
x = input("OLHA O PASTELLLL:").upper()
i = -1
inv =""
while( i >= -len(x)):
	inv = inv + x[i]
	i = i - 1
if(inv == x):
	print(x)
	print("1")
else:
	print(x)
	print("0")
		
		
-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:41:34) 
-- CODE:
x = input("OLHA O PASTELLLL:").upper()
y = x.replace(" ","")
i = -1

inv =""
while( i >= -len(y)):
	inv = inv + y[i]
	i = i - 1
if(inv == y):
	print(y)
	print("1")
else:
	print(y)
	print("0")
		
		
-- EXECUTION TIME:
0.199084
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:41:34) 
-- CODE:
x = input("OLHA O PASTELLLL:").upper()
y = x.replace(" ","")
i = -1

inv =""
while( i >= -len(y)):
	inv = inv + y[i]
	i = i - 1
if(inv == y):
	print(y)
	print("1")
else:
	print(y)
	print("0")
		
		
-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
